gcc/testsuite/rust/rustc/ui/macros/macro-path-prelude-fail-4.rs
#[derive(inline)] // { dg-error "" "" { target *-*-* } }
struct S;

fn main() {}

